add availability breach

--- a/Exercise 1/180631J_A01_EN4720.tex
+++ b/Exercise 1/180631J_A01_EN4720.tex
@@ -71,7 +71,7 @@ You can refer to books, web pages, research publications to gather the informati
 \begin{table}[htbp]
     \caption{Real-world examples of security breaches.
     }
-    \begin{tabularx}{\columnwidth}{|p{3cm}|p{3cm}|X|}
+    \begin{tabularx}{\columnwidth}{|p{3.4cm}|p{3.4cm}|X|}
         \hline
         \textbf{Security Goal} & \textbf{Example} & \textbf{Explanation}  \\
         
@@ -82,32 +82,33 @@ You can refer to books, web pages, research publications to gather the informati
         \\ \hline
         
         \hline
-        Confidentiality & 
+        \textbf{Confidentiality} (\textit{Keep data private or secret/ Control access}) & 
         &
         \\ \hline
         
         \hline
-        Integrity & 
+        \textbf{Integrity} (\textit{Trusted/ No unauthorized modification}) & 
         &
         \\ \hline
         
         \hline
-        Availability & 
+        \textbf{Availability} (\textit{Systems are up and running}) &
+        GitHub Distributed Denial-of-Service (DDoS) attack 2018 &
+        February 28, 2018 GitHub.com was unavailable from 17:21 to 17:26 UTC and intermittently unavailable from 17:26 to 17:30 UTC due to a DDoS attack. The attack originated from over a thousand different autonomous systems (ASNs) across tens of thousands of unique endpoints. It was an amplification attack using the Memcached-based approach that peaked at 1.35Tbps via 126.9 million packets per second.
+        \\ \hline
+        
+        \hline
+        \textbf{Authentication} (\textit{Who are you?/ Are you who you claim to be?}) & 
         &
         \\ \hline
         
         \hline
-        Authentication & 
+        \textbf{Authorization} (\textit{What abilities and access should this user have?}) & 
         &
         \\ \hline
         
         \hline
-        Authorization & 
-        &
-        \\ \hline
-        
-        \hline
-        Non-Repudiation &
+        \textbf{Non-Repudiation} (\textit{To not allow someone to deny something}) &
         &
         \\ \hline
         
