--- a/Exercise 1/180631J_A01_EN4720.tex
+++ b/Exercise 1/180631J_A01_EN4720.tex
@@ -123,38 +123,38 @@ The following sites may help you to get started:
     \item http://www.networkworld.com/topics/security.html
     \item http://www.zdnet.com.au/topic/security/ 
 \end{itemize}
-
-Furthermore, as security professionals, it is important that we stay updated. Below are some resources that you can use to stay updated. 
-
-\begin{table}[htbp]
-    \caption{Channels to stay informed.
-    }
-    \begin{tabularx}{\columnwidth}{|X|X|X|X|}
-        \hline
-        \textbf{Technology Partners} & \textbf{Government}       & \textbf{Security Organizations} & \textbf{Security News Sites}  \\
-        
-        \hline
-        Microsoft & 
-        US-CERT & 
-        SANS ISC &
-        Dark Reading
-        \\ \hline
-        
-        \hline
-        Red Hat & 
-        NIST NVD & 
-        &
-        The Hacker News
-        \\ \hline
-        
-        \hline
-        Ubuntu & 
-        SLCERT &
-        &
-        CSO Online
-        \\ \hline
-    \end{tabularx}
-\end{table}
+%
+%Furthermore, as security professionals, it is important that we stay updated. Below are some resources that you can use to stay updated. 
+%
+%\begin{table}[htbp]
+%    \caption{Channels to stay informed.
+%    }
+%    \begin{tabularx}{\columnwidth}{|X|X|X|X|}
+%        \hline
+%        \textbf{Technology Partners} & \textbf{Government}       & \textbf{Security Organizations} & \textbf{Security News Sites}  \\
+%        
+%        \hline
+%        Microsoft & 
+%        US-CERT & 
+%        SANS ISC &
+%        Dark Reading
+%        \\ \hline
+%        
+%        \hline
+%        Red Hat & 
+%        NIST NVD & 
+%        &
+%        The Hacker News
+%        \\ \hline
+%        
+%        \hline
+%        Ubuntu & 
+%        SLCERT &
+%        &
+%        CSO Online
+%        \\ \hline
+%    \end{tabularx}
+%\end{table}
 
 %%%%%%%%%%%%%%%%%%%%
 
@@ -203,10 +203,10 @@ Search the CVE database at \href{https://cve.mitre.org/}{cve.mitre.org} for vuln
         & Integrity, Confidentiality
         & None reported
         \\\hline
-        
-        &
-        &
-        &
+        CVE-2022-36934	
+        & An integer overflow in WhatsApp could result in remote code execution in an established video call. The attacker could gain access to the system, potentially steal sensitive information or modify the system's behavior, leading to a loss of data or disruption of service.
+        & Integrity, Confidentiality
+        & None reported
         \\\hline
     \end{tabularx}
 \end{table}
